--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <body style="background-color: #c4c4c4">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
